cabal-version:       2.4
name:                tomlerone
version:             0.0.0.0
synopsis:            Tomland online: web app for TOML checker
description:         TOML format online checker based on tomland library
homepage:            https://github.com/kowainik/tomlerone
bug-reports:         https://github.com/kowainik/tomlerone/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik<xrom.xkov@gmail.com>
copyright:           2019 Kowainik
category:            Web, Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/kowainik/tomlerone.git


common common-options
  build-depends:       base ^>= 4.12.0.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Tomlerone
  other-modules:       Paths_tomlerone

  build-depends:       tomland ^>= 1.2.0.0
                     , jsaddle
                     , jsaddle-warp
                     , miso

executable client
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       tomlerone
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
